Auto update favorite cities list in nav drawer.